--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Hello, World!"
-        android:textAlignment="center"
-        android:textColor="@color/purple_500"
-        android:textSize="24sp" />
-
-    <EditText
-        android:id="@+id/editText"
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:textColor="@color/teal_200" />
+        app:srcCompat="@drawable/cow" />
 
-    <Button
-        android:id="@+id/button"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
 
-    <Switch
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TableRow style="@style/button_row_style">
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/button_clear"
+                style="@style/button_style"
+                android:text="@string/button_clear" />
 
-    <ToggleButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/button_bracket"
+                style="@style/button_style"
+                android:text="@string/button_bracket" />
 
-    <CalendarView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/button_percent"
+                style="@style/button_style"
+                android:text="@string/button_percent" />
 
-</LinearLayout>
+            <Button
+                android:id="@+id/button_div"
+                style="@style/button_style"
+                android:text="@string/button_div" />
+        </TableRow>
+
+        <TableRow style="@style/button_row_style">
+
+            <Button
+                android:id="@+id/button_7"
+                style="@style/button_style"
+                android:text="@string/button_7" />
+
+            <Button
+                android:id="@+id/button_8"
+                style="@style/button_style"
+                android:text="@string/button_8" />
+
+            <Button
+                android:id="@+id/button_9"
+                style="@style/button_style"
+                android:text="@string/button_9" />
+
+            <Button
+                android:id="@+id/button_mul"
+                style="@style/button_style"
+                android:text="@string/button_mul" />
+        </TableRow>
+
+        <TableRow style="@style/button_row_style">
+
+            <Button
+                android:id="@+id/button_4"
+                style="@style/button_style"
+                android:text="@string/button_4" />
+
+            <Button
+                android:id="@+id/button_5"
+                style="@style/button_style"
+                android:text="@string/button_5" />
+
+            <Button
+                android:id="@+id/button_6"
+                style="@style/button_style"
+                android:text="@string/button_6" />
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/button_style"
+                android:text="@string/button_minus" />
+        </TableRow>
+
+        <TableRow style="@style/button_row_style">
+
+            <Button
+                android:id="@+id/button_1"
+                style="@style/button_style"
+                android:text="@string/button_1" />
+
+            <Button
+                android:id="@+id/button_2"
+                style="@style/button_style"
+                android:text="@string/button_2" />
+
+            <Button
+                android:id="@+id/button_3"
+                style="@style/button_style"
+                android:text="@string/button_3" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/button_style"
+                android:text="@string/button_plus" />
+        </TableRow>
+
+        <TableRow style="@style/button_row_style">
+
+            <Button
+                android:id="@+id/button_negative"
+                style="@style/button_style"
+                android:text="@string/button_negative" />
+
+            <Button
+                android:id="@+id/button_0"
+                style="@style/button_style"
+                android:text="@string/button_0" />
+
+            <Button
+                android:id="@+id/button_point"
+                style="@style/button_style"
+                android:text="@string/button_point" />
+
+            <Button
+                android:id="@+id/button_equal"
+                style="@style/button_style"
+                android:text="@string/button_equal"
+                android:backgroundTint="@color/button_equal_color"/>
+        </TableRow>
+
+    </TableLayout>
+</FrameLayout>
