--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="button_color">#125032</color>
-    <color name="button_equal_color">#40AC7B</color>
+    <color name="button_color">#225522</color>
+    <color name="button_equal_color">#338833</color>
+    <color name="background_color">#112211</color>
 </resources>
