--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,26 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/inputField"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_weight="3"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/white"
-        android:textSize="@dimen/result_text_size" />
+        style="@style/text_view_style" />
 
     <TextView
         android:id="@+id/resultField"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_weight="1"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/white"
-        android:textSize="@dimen/result_text_size" />
+        style="@style/text_view_style" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -30,118 +21,117 @@
 
         <TableRow style="@style/button_row_style">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_clear"
-                style="@style/button_style"
-                android:text="@string/button_clear" />
+                android:text="@string/button_clear"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_bracket"
-                style="@style/button_style"
-                android:text="@string/button_bracket" />
+                android:text="@string/button_bracket"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_percent"
-                style="@style/button_style"
-                android:text="@string/button_percent" />
+                android:text="@string/button_percent"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_div"
-                style="@style/button_style"
-                android:text="@string/button_div" />
+                android:text="@string/button_div"
+                style="@style/button_style" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_7"
-                style="@style/button_style"
-                android:text="@string/button_7" />
+                android:text="@string/button_7"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_8"
-                style="@style/button_style"
-                android:text="@string/button_8" />
+                android:text="@string/button_8"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_9"
-                style="@style/button_style"
-                android:text="@string/button_9" />
+                android:text="@string/button_9"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_mul"
-                style="@style/button_style"
-                android:text="@string/button_mul" />
+                android:text="@string/button_mul"
+                style="@style/button_style" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_4"
-                style="@style/button_style"
-                android:text="@string/button_4" />
+                android:text="@string/button_4"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_5"
-                style="@style/button_style"
-                android:text="@string/button_5" />
+                android:text="@string/button_5"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_6"
-                style="@style/button_style"
-                android:text="@string/button_6" />
+                android:text="@string/button_6"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_minus"
-                style="@style/button_style"
-                android:text="@string/button_minus" />
+                android:text="@string/button_minus"
+                style="@style/button_style" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_1"
-                style="@style/button_style"
-                android:text="@string/button_1" />
+                android:text="@string/button_1"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_2"
-                style="@style/button_style"
-                android:text="@string/button_2" />
+                android:text="@string/button_2"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_3"
-                style="@style/button_style"
-                android:text="@string/button_3" />
+                android:text="@string/button_3"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_plus"
-                style="@style/button_style"
-                android:text="@string/button_plus" />
+                android:text="@string/button_plus"
+                style="@style/button_style" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_negative"
-                style="@style/button_style"
-                android:text="@string/button_negative" />
+                android:text="@string/button_negative"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_0"
-                style="@style/button_style"
-                android:text="@string/button_0" />
+                android:text="@string/button_0"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_point"
-                style="@style/button_style"
-                android:text="@string/button_point" />
+                android:text="@string/button_point"
+                style="@style/button_style" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_equal"
-                style="@style/button_style"
-                android:backgroundTint="@color/button_equal_color"
-                android:text="@string/button_equal" />
+                android:text="@string/button_equal"
+                style="@style/button_equal_style" />
         </TableRow>
 
     </TableLayout>
