--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_text_size">36sp</dimen>
-    <dimen name="button_text_size.landscape">14sp</dimen>
-    <dimen name="result_text_size">32sp</dimen>
+    <dimen name="button_text_size_landscape">20sp</dimen>
+    <dimen name="text_size">32sp</dimen>
 </resources>
