--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,138 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/inputField"
-        android:layout_weight="3"
-        style="@style/text_view_style" />
+        style="@style/text_view_style"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/resultField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/resultField"
-        android:layout_weight="1"
-        style="@style/text_view_style" />
+        style="@style/text_view_style"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputField" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultField">
 
         <TableRow style="@style/button_row_style">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_clear"
-                android:text="@string/button_clear"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_clear" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_bracket"
-                android:text="@string/button_bracket"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_bracket" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_percent"
-                android:text="@string/button_percent"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_percent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_div"
-                android:text="@string/button_div"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_div" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_7"
-                android:text="@string/button_7"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_7" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_8"
-                android:text="@string/button_8"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_8" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_9"
-                android:text="@string/button_9"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_9" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_mul"
-                android:text="@string/button_mul"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_mul" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_4"
-                android:text="@string/button_4"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_4" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_5"
-                android:text="@string/button_5"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_5" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_6"
-                android:text="@string/button_6"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_6" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_minus"
-                android:text="@string/button_minus"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_minus" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_1"
-                android:text="@string/button_1"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_1" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_2"
-                android:text="@string/button_2"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_2" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_3"
-                android:text="@string/button_3"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_3" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_plus"
-                android:text="@string/button_plus"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_plus" />
         </TableRow>
 
         <TableRow style="@style/button_row_style">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_negative"
-                android:text="@string/button_negative"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_negative" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_0"
-                android:text="@string/button_0"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_0" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_point"
-                android:text="@string/button_point"
-                style="@style/button_style" />
+                style="@style/button_style"
+                android:text="@string/button_point" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_equal"
-                android:text="@string/button_equal"
-                style="@style/button_equal_style" />
+                style="@style/button_equal_style"
+                android:text="@string/button_equal" />
         </TableRow>
 
     </TableLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
